--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,8 +4,10 @@ on:
   push:
     branches:
       - 'Benjamin'
-    tags:
-      - 'v*'
+    tags: ghcr.io/mwesigab/simplewhale:latest
+  pull_request:
+    branches:
+      - 'Benjamin'
 
 jobs:
   build:
@@ -17,10 +19,12 @@ jobs:
         uses: actions/checkout@v2
       -
         name: Login to Docker Hub
+        if: github.event_name != 'pull_request'
         uses: docker/login-action@v1
         with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
